--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="./style.css" />
-    <title>An animation</title>
+    <title>Cool bottom menu</title>
   </head>
   <body data-nav="false">
     <main></main>
